--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,9 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 flutter {
